--- a/lib/assets/chart_cell/main.css
+++ b/lib/assets/chart_cell/main.css
@@ -112,6 +112,27 @@ input[type=number] {
   flex-shrink: 3;
 }
 
+.button-blue {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  background-color: #2563EB;
+  color: #ffffff;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-weight: 500;
+  white-space: nowrap;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  border-color: transparent;
+}
+
+.button-blue:hover {
+  background-color: #1D4ED8;
+  cursor: pointer;
+}
+
 .info-box {
   margin-bottom: 24px;
   padding: 16px;
