--- a/lib/assets/chart_cell/main.css
+++ b/lib/assets/chart_cell/main.css
@@ -15,20 +15,18 @@
   --blue-100: #ecf0ff;
   --blue-600: #3e64ff;
   --blue-700: #2d4cdb;
-
-  --red--600: #db1920;
-  --red-700: #bc1227;
 }
 
 .container {
   border: solid 1px var(--gray-300);
   border-bottom: solid 1px var(--gray-200);
-  border-radius: 0.5rem 0.5rem 0 0;
+  border-radius: 0.5rem;
   background-color: rgba(248, 250, 252, 0.3);
 }
 
 .row {
   display: flex;
+  gap: 24px;
 }
 
 .root {
@@ -95,12 +93,11 @@ input[type=number] {
   display: flex;
   flex-direction: column;
   margin-bottom: 16px;
-  padding: 0 12px;
-  flex-basis: 26%;
+  flex-basis: 28%;
 }
 
 .field:first-child {
-  flex-basis: 39%;
+  flex-basis: 41%;
   margin-left: 4px;
 }
 
@@ -119,7 +116,7 @@ input[type=number] {
 
 .button {
   padding: 0.5rem 1.25rem;
-  color: var(--gray-50);
+  color: var(--gray-500);
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 500;
@@ -128,47 +125,18 @@ input[type=number] {
   border-width: 1px;
   border-color: transparent;
   margin-right: 15px;
-  margin-bottom: 5px;
+  margin-bottom: 6px;
   background-color: var(--gray-100);
-}
-
-.button--sm {
-  padding: 0.25rem 0.5rem;
-  font-weight: 400;
-  font-size: 0.85rem;
 }
 
 .button:hover {
   cursor: pointer;
+  background-color: var(--gray-300);
 }
 
 .button:disabled {
   opacity: 50%;
   pointer-events: none;
-}
-
-.button--blue {
-  background-color: var(--blue-600);
-}
-
-.button--blue:hover {
-  background-color: var(--blue-700);
-}
-
-.button--red {
-  background-color: var(--red--600);
-}
-
-.button--red:hover {
-  background-color: var(--red-700);
-}
-
-.button--gray {
-  color: var(--gray-500);
-}
-
-.button--transparent {
-  background-color: transparent;
 }
 
 .info-box {
@@ -228,19 +196,33 @@ input::-webkit-inner-spin-button {
 }
 
 .accordion-control {
-  display: flex;
-  margin-left: 0.75rem;
-  margin-left: 0.875rem;
+  background-color: var(--gray-100);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 97%;
+  font-size: 0.875rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 7px;
+  width: auto;
+  flex-grow: 1;
+  color: var(--gray-500);
+}
+
+.control--sm {
+  background-color: transparent;
+  position: relative;
+  top: 42px;
+  left: 75%;
+  height: 0px;
+  width: 24%;
 }
 
 .accordion-svg {
   transition-property: all;
   transition-duration: 200ms;
   width: 0.75rem;
+  height: 0.75rem;
+  color: var(--gray-600);
   margin-left: 0.75rem;
   padding: 10px;
   background-color: var(--gray-100);
@@ -250,6 +232,7 @@ input::-webkit-inner-spin-button {
 
 .accordion-svg:hover {
   background-color: var(--gray-300);
+  cursor: pointer;
 }
 
 .rotate-180 {
@@ -264,32 +247,24 @@ input::-webkit-inner-spin-button {
   color: var(--gray-600);
 }
 
-.layer-content {
-  margin-top: -15px;
+.layer-wrapper {
+  border-bottom: 1px solid var(--gray-100);
+  margin-left: 14px;
+  margin-right: 14px;
+  margin-bottom: 12px;
 }
 
-.layer-wrapper {
-  border: 1px solid var(--gray-100);
-  border-radius: 5px;
-  margin-bottom: 5px;
+.layer-wrapper:last-child {
+  border: none;
+  margin-bottom: 0px;
 }
 
 .wrapper--closed {
-  border: none;
-  margin-bottom: 10px;
-  margin-top: 5px;
+  padding-bottom: 10px;
+  margin-top: 10px;
 }
 
 .add-layer {
   display: flex;
   justify-content: flex-end;
-}
-
-.remove-layer {
-  display: flex;
-  flex-grow: 1;
-  justify-content: flex-end;
-  margin-top: 20px;
-  margin-left: 10px;
-  height: 50%;
 }
