--- a/lib/assets/chart_cell/main.css
+++ b/lib/assets/chart_cell/main.css
@@ -267,3 +267,67 @@ input::-webkit-inner-spin-button {
   display: flex;
   justify-content: flex-end;
 }
+
+.hidden-checkbox-input {
+  display: none;
+}
+
+.input-icon {
+  border: 1px solid var(--gray-200);
+  outline: none;
+  padding: 8px 12px 8px 42px;
+}
+
+.input-icon:hover {
+  cursor: pointer;
+}
+
+.input-icon-container {
+  position: relative;
+  flex-basis: 41%;
+}
+
+.icon-container {
+  position: absolute;
+  top: 20px;
+  padding: 5px 6px;
+  border-right: 1px solid var(--gray-200);
+  width: 22px;
+  height: 23px;
+  background-color: var(--gray-200);
+  border-radius: 0.5rem;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  margin-left: 1px;
+}
+
+.icon-container:hover {
+  cursor: pointer;
+  background-color: var(--gray-300);
+}
+
+.input-icon-text {
+  border: 1px solid var(--gray-200);
+  outline: none;
+  padding: 8px 12px 8px 42px;
+}
+
+.hidden-checkbox:hover {
+  cursor: pointer;
+}
+
+/* Fix icon position - Safari 11+ */
+@media not all and (min-resolution: 0.001dpcm) {
+  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
+    .icon-container {
+      top: 22px;
+    }
+  }
+}
+
+/* Fix icon border - Firefox */
+@-moz-document url-prefix() {
+  .icon-container {
+    height: 24px;
+  }
+}
