Remove horizontal lines between layers

--- a/lib/assets/chart_cell/main.css
+++ b/lib/assets/chart_cell/main.css
@@ -39,6 +39,7 @@ pre {
 .row {
   display: flex;
   gap: 24px;
+  margin-bottom: 16px;
 }
 
 .root {
@@ -113,7 +114,6 @@ input[type="number"] {
 .field {
   display: flex;
   flex-direction: column;
-  margin-bottom: 16px;
   flex-basis: 33%;
 }
 
@@ -146,7 +146,6 @@ input[type="number"] {
 .field-with-settings {
   display: flex;
   flex-direction: column;
-  margin-bottom: 4px;
 }
 
 .root-field {
@@ -187,12 +186,28 @@ input[type="number"] {
   pointer-events: none;
 }
 
+.button--toggle {
+  font-size: 0.875rem;
+  font-weight: normal;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+  background: transparent;
+}
+
+.button--toggle .button-svg {
+  width: 0.75rem;
+  height: 0.6rem;
+}
+
+.button--toggle:hover {
+  background: transparent;
+}
+
 .button--sm {
   margin: 0;
-  padding: 5px 10px;
+  padding: 5px 0 0 10px;
   background: transparent;
-  position: relative;
-  left: 10px;
 }
 
 .button--sm:hover {
@@ -265,28 +280,33 @@ input::-webkit-inner-spin-button {
 }
 
 .accordion-control {
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: space-between;
-  text-transform: uppercase;
-  font-size: 0.875rem;
-  padding: 0.25rem 0.25rem;
+  padding: 0.25rem 0;
   width: auto;
   flex-grow: 1;
   color: var(--gray-700);
   margin-bottom: 6px;
 }
 
+.accordion-open .accordion-control {
+  display: flex;
+}
+
+.accordion-open .accordion-body {
+  padding-bottom: 12px;
+}
+
 .button-svg {
   transition-property: all;
   transition-duration: 200ms;
   width: 0.95rem;
-  height: 0.95rem;
-  color: var(--gray-600);
+  color: var(--gray-500);
 }
 
-.rotate-180 {
-  transform: rotate(180deg);
+.rotate--90 {
+  transform: rotate(-90deg);
 }
 
 .rotate-0 {
@@ -294,27 +314,12 @@ input::-webkit-inner-spin-button {
 }
 
 .layer-wrapper {
-  border-bottom: 1px solid var(--gray-200);
-  margin-left: 14px;
-  margin-right: 14px;
-  margin-bottom: 12px;
-  padding-bottom: 8px;
-}
-
-.layer-wrapper:last-child {
-  border: none;
-  margin-bottom: 0px;
-}
-
-.wrapper--closed {
-  padding-bottom: 12px;
-  margin-top: 10px;
+  margin: 0 14px;
 }
 
 .add-layer {
   display: flex;
-  justify-content: flex-end;
-  margin-top: 4px;
+  padding: 12px 0 0 14px;
 }
 
 .hidden-checkbox-input {
