--- a/lib/assets/chart_cell/main.css
+++ b/lib/assets/chart_cell/main.css
@@ -14,6 +14,7 @@
   --gray-800: #1c2a3a;
   --gray-900: #0d1829;
 
+  --blue-50: #F5F7FF;
   --blue-100: #ecf0ff;
   --blue-200: #d8e0ff;
   --blue-600: #3e64ff;
@@ -40,7 +41,7 @@ pre {
 .row {
   display: flex;
   gap: 24px;
-  margin-bottom: 16px;
+  margin: 7px 0 0;
 }
 
 .root {
@@ -284,13 +285,15 @@ input::-webkit-inner-spin-button {
 
 .accordion-control {
   display: flex;
-  padding: 0 6px;
+  padding: 6px;
   align-items: center;
   justify-content: space-between;
   width: auto;
   flex-grow: 1;
   color: var(--gray-700);
   margin-bottom: 0px;
+  background-color: var(--gray-100);
+  border-radius: 0.5rem;
 }
 
 .accordion-body {
@@ -317,11 +320,11 @@ input::-webkit-inner-spin-button {
 
 .layer-wrapper {
   margin: 7px 14px;
-  background-color: var(--gray-100);
+  border: 1px solid var(--gray-200);
   border-radius: 0.5rem;
 }
 
-.layer-wrapper:hover {
+.accordion-control {
   cursor: move;
 }
 
@@ -390,13 +393,17 @@ input::-webkit-inner-spin-button {
   border: 1px solid var(--gray-200);
 }
 
-/* Switch */
+/* Switch SM */
+
+.switch-sm {
+  margin-top: 3px;
+}
 
 .switch-button {
   display: inline-block;
   position: relative;
-  width: 56px;
-  height: 28px;
+  width: 28px;
+  height: 14px;
   user-select: none;
 }
 
@@ -410,12 +417,12 @@ input::-webkit-inner-spin-button {
   appearance: none;
   position: absolute;
   display: block;
-  width: 28px;
-  height: 28px;
+  width: 14px;
+  height: 14px;
   margin: 0;
   border-radius: 9999px;
   background-color: white;
-  border: 5px solid var(--gray-200);
+  border: 2.5px solid var(--gray-300);
   cursor: pointer;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -427,7 +434,7 @@ input::-webkit-inner-spin-button {
   height: 100%;
   width: 100%;
   border-radius: 9999px;
-  background-color: var(--gray-200);
+  background-color: var(--gray-300);
   cursor: pointer;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
