--- a/lib/assets/chart_cell/main.css
+++ b/lib/assets/chart_cell/main.css
@@ -14,7 +14,7 @@
   --gray-800: #1c2a3a;
   --gray-900: #0d1829;
 
-  --blue-50: #F5F7FF;
+  --blue-50: #f5f7ff;
   --blue-100: #ecf0ff;
   --blue-200: #d8e0ff;
   --blue-600: #3e64ff;
